deployment-counter-frontend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: counter-frontend
spec:
  selector:
    matchLabels:
      app: counter-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: counter-frontend
    spec:
      containers:
        - name: counter-frontend
          image: >-
            ghcr.io/zwe9g/counter-frontend:v1
          ports:
            - containerPort: 3000
              protocol: TCP
