deployment-counter-postgresadmin.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: counter-postgresadmin
spec:
  selector:
    matchLabels:
      app: counter-postgresadmin
    replicas: 1
    template:
      metadata:
        labels:
          apps: counter-postgresadmin
      spec:
        containers:
        - name: counter-postgresadmin
          image: >-
            image
          ports:
            - containerPort: 80
              protocol: TCP
