service-counter-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-backend
  labels:
    app: counter-backend
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: counter-backend
