route-counter-postgresadmin.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: counter-postgresadmin
spec:
  to:
    kind: Service
    name: counter-postgresadmin
    weight: 100
  port:
    targetPort: 5050
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
